--- a/resume.html
+++ b/resume.html
@@ -2,42 +2,40 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" type="text/css"/>
-    <script src="https://kit.fontawesome.com/18c1dc26d9.js" crossorigin="anonymous"></script>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" type="text/css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
-    <link rel="stylesheet" href="assets/css/style.css" type="text/css"/>
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Rosie</title>
 </head>
 <body>
     <header>
         <div class="row no-gutters">
-            <a href="index.html" class="col-md-4 logo">
-
-            </a>
+            <a class="col-md-4 logo" href="02-index.html"></a>
             <div class="col-md-8">
                 <div class="row no-gutters bg-color-name-title">
                     <div class="col heading">
                         <h1 class="name">Rosie Odenkirk</h1>
-                        <h2 class="title">Full Stack Developer</h2>
+                        <h2 class="title"> Full Stack Developer</h2>
                     </div>
                 </div>
                 <div class="row no-gutters">
                     <div class="col">
-                        <ul id="nav" class="list-inline menu-container">
-                            <li class="col-6 col-sm-3 ui-menu-color-home list-inline-item menuitem">
+                        <ul id="nav" class="list-inline menucontainer">
+                            <li class="col-6 col-sm-3 list-inline-item ui-menu-color-home menuitem">
                                 <a href="index.html" class="hvr-sweep-to-bottom"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
                             </li>
-                            <li class="col-6 col-sm-3 ui-menu-color-resume list-inline-item menuitem">
+                            <li class="col-6 col-sm-3 list-inline-item ui-menu-color-resume menuitem">
                                 <a href="resume.html" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap" aria-hidden="true"></i><span>Resume</span></a>
                             </li>
-                            <li class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem">
+                            <li class="col-6 col-sm-3 list-inline-item ui-menu-color-contact menuitem">
                                 <a href="contact.html" class="hvr-sweep-to-bottom"><i class="fa fa-comment-o" aria-hidden="true"></i><span>Contact</span></a>
                             </li>
-                            <li class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem">
-                                <a href="assets/cv/sample-cv.pdf" target="_blank" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download</span></a>
-                            </li>     
+                            <li class="col-6 col-sm-3 list-inline-item ui-menu-color-download menuitem">
+                                <a href="assets/cv/sample-cv.pdf" target="_blank" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download CV</span></a>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -88,53 +86,53 @@
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">Front End</h4>
                                 <p>
-                                    I'm skilled in UX Design using the trinity of HTML, CSS and Javascript. I also have extensive experience in frontend frameworks such as Angular and React.
+                                    I'm skilled in User Experience Design using the trinity of HTML/CSS/Javascript. I also have extensive experience in Front End Frameworks such as Angular and React
                                 </p>
                             </div>
                         </div>
                     </div>
-                <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
-                    <div class="row">
-                        <div class="col-2">
-                            <i class="three-reasons-icon fa fa-gears" aria-hidden="true"></i>
-                        </div>
-                        <div class="col-10">
-                            <h4 class="three-reasons-heading uppercase">Back End</h4>
-                            <p>
-                                I specialize in web-driven applications. Many of my projects utilize document driven data. I use Python and Django in conjunction with MongoDB to process and present information.
-                            </p>
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="three-reasons-icon fa fa-gears" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10">
+                                <h4 class="three-reasons-heading uppercase">Back End</h4>
+                                <p>
+                                    I specialize in data-driven web applications. Many of my projects utilise document-based data. I use Python and Django in conjunction with MongoDB to process and present information.
+                                </p>
+                            </div>
                         </div>
                     </div>
-                </div>
                 </div>
                 <div class="row progress-section">
                     <div class="col">
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%;">
                                 <span class="sr-only">90% complete</span>
                             </div>
                             <span class="progress-type">HTML / HTML5</span>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
+                            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%;">
                                 <span class="sr-only">80% complete</span>
                             </div>
                             <span class="progress-type">CSS / CSS3</span>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar bg-info" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%;">
+                            <div class="progress-bar bg-info" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%;">
                                 <span class="sr-only">70% complete</span>
                             </div>
-                            <span class="progress-type">Javascript / jQuery</span>
+                            <span class="progress-type">JavaScript / jQuery</span>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
+                            <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%;">
                                 <span class="sr-only">80% complete</span>
                             </div>
                             <span class="progress-type">Django / Python</span>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
+                            <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%;">
                                 <span class="sr-only">80% complete</span>
                             </div>
                             <span class="progress-type">SQL / NoSQL</span>
@@ -143,7 +141,7 @@
                 </div>
             </div>
         </div>
-                
+        
     </section>
     <footer class="container-fluid">
         <div id="footer-details" class="row">
@@ -153,8 +151,8 @@
                     Full Stack Web Developer. Skilled in everything from HTML to Heroku. The capacity for structural and design thinking.
                 </p>
             </div>
-            <div class="col-sm-4 uppercase general-sub">
-                <h5>Download CV</h5>
+            <div class="col-sm-4">
+                <h5 class="uppercase general-sub">Download</h5>
                 <p class="inline-block">
                     Need a printable version of my CV? Download it here.
                     <a href="assets/cv/sample-cv.pdf" target="_blank" class="cv-pdf">
@@ -163,49 +161,48 @@
                     </a>
                 </p>
             </div>
-            <div class="col-sm-4 uppercase general-sub">
-                <h5>Social</h5>
+            <div class="col-sm-4">
+                <h5 class="uppercase general-sub">Social</h5>
                 <ul class="list-inline social-links">
                     <li class="list-inline-item">
-                        <a href="#" target="_blank">
+                        <a target="_blank" href="#">
                             <i class="fa fa-facebook" aria-hidden="true"></i>
                             <span class="sr-only">Facebook</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="#" target="_blank">
+                        <a target="_blank" href="#">
                             <i class="fa fa-twitter" aria-hidden="true"></i>
                             <span class="sr-only">Twitter</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="#" target="_blank">
+                        <a target="_blank" href="#">
                             <i class="fa fa-linkedin" aria-hidden="true"></i>
-                            <span class="sr-only">Linkedin</span>
+                            <span class="sr-only">LinkedIn</span>
                         </a>
-                    </li> 
+                    </li>
                     <li class="list-inline-item">
-                        <a href="#" target="_blank">
+                        <a target="_blank" href="#">
                             <i class="fa fa-pinterest" aria-hidden="true"></i>
                             <span class="sr-only">Pinterest</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="#" target="_blank">
+                        <a target="_blank" href="#">
                             <i class="fa fa-instagram" aria-hidden="true"></i>
                             <span class="sr-only">Instagram</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="#" target="_blank">
+                        <a target="_blank" href="#">
                             <i class="fa fa-youtube" aria-hidden="true"></i>
-                            <span class="sr-only">Youtube</span>
+                            <span class="sr-only">YouTube</span>
                         </a>
                     </li>
                 </ul>
             </div>
         </div>
-
     </footer>
 </body>
 </html>
